--- a/week3/index.html
+++ b/week3/index.html
@@ -10,10 +10,11 @@
     <h1>Welcome to TodoList!</h1>
     <div class="todo">
       <input type="text" id="input" placeholder="Enter your toDo's here!" />
-      <input type="text" id="date" placeholder="date" />
+      <input type="date" id="date" placeholder="date" />
       <button id="btn">Add</button>
+      <div id="todo-text"></div>
     </div>
     <script src="script.js"></script>
+     
   </body>
 </html>
-<!-- kya proble aa rha hmko n aa rha js add karne Js to add hai na ni ye n js m code krne -->
